tests/sumo/devices/ssm/errors/filter_edges_junction_not_found/errors.sumo
Warning: No measures specified for ssm device of vehicle 'ego'. Registering all available SSMs.
Warning: Unknown junction ID 'CC' in SSM device edge filter (input_selection.txt): junction:CC
